--- a/templates/base.html
+++ b/templates/base.html
@@ -224,9 +224,9 @@
           <h2 class = "text-center">Mailing List</h2>
           <div class="indicates-required visually-hidden"><span class="asterisk">*</span> indicates required</div>
           <div class="mc-field-group">
-            <span class = "visually-hidden"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
+            <span class = "sr-only"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
             </label></span>
-            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder = "e.g. learntodive@divecourses.com">
+            <input type="email" value="" name="EMAIL" aria-label = "email" class="required email" id="mce-EMAIL" placeholder = "e.g. learntodive@divecourses.com">
           </div>
           <div id="mce-responses" class="clear foot">
             <div class="response" id="mce-error-response" style="display:none"></div>
@@ -238,7 +238,7 @@
           </div>
           <div class="optionalParent">
             <div class="clear foot">
-              <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button mx-auto">
+              <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-secondary mx-auto">
             </div>
           </div>
         </div>
@@ -283,9 +283,9 @@
       </div>
       <div class="col-md-2">
         <p>
-        <a class = "text-reset text-decoration-none fs-3 me-1" href="https://www.instagram.com" rel="noopener noreferrer" target="_blank"><i class="bi bi-instagram"></i></a>
-        <a class = "text-reset text-decoration-none fs-3 me-1" href="https://www.facebook.com/Scubasport-103293935757804" rel="noopener noreferrer" target="_blank"><i class="bi bi-facebook"></i></a>
-        <a class = "text-reset text-decoration-none fs-3" href="https://www.twitter.com" rel="noopener noreferrer" target="_blank"><i class="bi bi-twitter"></i></a>
+        <a class = "text-reset text-decoration-none fs-3 me-1" href="https://www.instagram.com" rel="noopener noreferrer" target="_blank"><i class="bi bi-instagram"></i><span class="sr-only">Instagram</span></a>
+        <a class = "text-reset text-decoration-none fs-3 me-1" href="https://www.facebook.com/Scubasport-103293935757804" rel="noopener noreferrer" target="_blank"><i class="bi bi-facebook"></i><span class="sr-only">Facebook</span></a>
+        <a class = "text-reset text-decoration-none fs-3" href="https://www.twitter.com" rel="noopener noreferrer" target="_blank"><i class="bi bi-twitter"></i><span class="sr-only">Twitter</span></a>
       </p>
       </div>
     </div>
