--- a/static/css/base.css
+++ b/static/css/base.css
@@ -178,6 +178,10 @@ input[type=number] {
     z-index:9999;
 }
 
+.black-background-filter{
+    background-color: rgba(5, 5, 5, 0.3);
+}
+
 .font-size-3em{
     font-size:3em;
 }
@@ -236,7 +240,6 @@ input[type=number] {
     justify-content: center;
     flex-direction: column;
     align-items: flex-start;
-    width: 50%;
 }
 
 .home-inner-headline {
