--- a/templates/base.html
+++ b/templates/base.html
@@ -224,7 +224,7 @@
           <h2 class = "text-center">Mailing List</h2>
           <div class="indicates-required visually-hidden"><span class="asterisk">*</span> indicates required</div>
           <div class="mc-field-group">
-            <span class = "sr-only"><label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
+            <label class = "sr-only" for="mce-EMAIL">Email Address<span class="asterisk">*</span>
             </label></span>
             <input type="email" value="" name="EMAIL" aria-label = "email" class="required email" id="mce-EMAIL" placeholder = "e.g. learntodive@divecourses.com">
           </div>
@@ -234,7 +234,8 @@
           </div>
           <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
           <div style="position: absolute; left: -5000px;" aria-hidden="true">
-            <input type="text" name="b_9149d14a7f81b786be4a1ee54_4e6fba4a14" tabindex="-1" value="">
+            <label for="mailchimp">Mailchimp</label>
+            <input type="text" id="mailchimp" name="b_9149d14a7f81b786be4a1ee54_4e6fba4a14" tabindex="-1" value="">
           </div>
           <div class="optionalParent">
             <div class="clear foot">
