fix html errors product details

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -60,7 +60,7 @@
                                         </button>
                                     </span>
                                 </div>
-                                <input class="form-control qty_input qty-input input-number" type="number" name="quantity" value="0" min="0" max="{{ variant.count }}" id="id_qty" data-sku="">
+                                <input class="form-control qty_input qty-input input-number" type="number" name="quantity" value="0" min="0" max="0" id="id_qty" data-sku="">
                                 <div class="input-group-append">
                                     <span class="input-group-btn">
                                         <button type="button" class="quantity-right-plus btn btn-secondary bi bi-plus-lg" data-type="plus" data-field="">
