fix html errors product details

--- a/templates/base.html
+++ b/templates/base.html
@@ -225,7 +225,7 @@
           <div class="indicates-required visually-hidden"><span class="asterisk">*</span> indicates required</div>
           <div class="mc-field-group">
             <label class = "sr-only" for="mce-EMAIL">Email Address<span class="asterisk">*</span>
-            </label></span>
+            </label>
             <input type="email" value="" name="EMAIL" aria-label = "email" class="required email" id="mce-EMAIL" placeholder = "e.g. learntodive@divecourses.com">
           </div>
           <div id="mce-responses" class="clear foot">
