--- a/courses/templates/courses/course_detail.html
+++ b/courses/templates/courses/course_detail.html
@@ -45,8 +45,8 @@
         </div>
         <div class="col-12 col-md-6 d-flex flex-column">
             <h2>{{ object.friendly_name }}</h2>
-            <p>{{ object.description | linebreaks}}</p>
-            <p>{{ object.extra_details | linebreaks}}</p>
+            <div>{{ object.description | linebreaks}}</div>
+            <div>{{ object.extra_details | linebreaks}}</div>
             <p><strong>Duration:</strong> {{ object.duration_weeks }} week</p>
             <p><strong>Price:</strong> ${{object.price}} </p>
             <div class = "align-self-start">
