--- a/products/templates/products/category_list.html
+++ b/products/templates/products/category_list.html
@@ -25,7 +25,7 @@
       <thead class="thead-dark">
         <tr>
           <th scope="col">CATEGORY</th>
-          <th></th>
+          <th><span class="sr-only">MANAGE</span></th>
         </tr>
       </thead>
       <tbody>
