--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -27,20 +27,17 @@
                                 <thead>
                                     <tr>
                                         <th scope="col">Item</th>
-                                        <th scope="col"></th>
+                                        <th scope="col"><span class = "sr-only">Details</span></th>
                                         <th scope="col">Price</th>
                                         <th scope="col">Qty</th>
                                         <th scope="col">Total</th>
-                                        <th scope="col"></th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     {% for item in bag_items %}
                                     <tr>
                                         <td class="w-25">
-                                            <img class="img-fluid rounded"
-                                                src="{% if item.inventory.product.image %} {{ item.inventory.product.image.url }} {% else %} {% static 'img/garbage-home-triple.webp' %} {% endif %}"
-                                                alt="{{item.inventory.product.friendly_name}}">
+                                            <img class="img-fluid rounded" src="{% if item.inventory.product.image %} {{ item.inventory.product.image.url }} {% else %} {% static 'img/garbage-home-triple.webp' %} {% endif %}" alt="{{item.inventory.product.friendly_name}}">
                                         </td>
                                         <td>
                                             <p>
@@ -52,43 +49,16 @@
                                             <p>
                                                 Size: {{item.inventory.size}}
                                             </p>
-
                                         </td>
                                         <td>
                                             {{item.inventory.product.price}}
                                         </td>
                                         <td style="width:150px">
-                                            <form id="update_qty" method="POST"
-                                                action="{% url 'adjust_bag' item.inventory.id %}">
-                                                {% csrf_token %}
-                                                <div class="input-group d-flex">
-                                                    <div class="input-group-prepend">
-                                                        <span class="input-group-btn">
-                                                            <button type="submit"
-                                                                class="quantity-left-minus btn btn-secondary bi bi-dash-lg"
-                                                                data-type="minus" data-field="">
-                                                            </button>
-                                                        </span>
-                                                    </div>
-                                                    <input type="number" id="quantity" name="quantity"
-                                                        class="form-control qty_input qty-input input-number"
-                                                        value="{{item.quantity}}" min="1" max="{{item.inventory.count}}"
-                                                        data-inventory-count="{{item.inventory.count}}">
-                                                    <div class="input-group-append">
-                                                        <span class="input-group-btn">
-                                                            <button type="button"
-                                                                class="quantity-right-plus btn btn-secondary bi bi-plus-lg"
-                                                                data-type="plus" data-field="">
-                                                            </button>
-                                                        </span>
-                                                    </div>
-                                                </div>
-                                            </form>
+                                            <p>
+                                                {{item.quantity}}
+                                            </p>
                                         </td>
                                         <td>£{{ item.subtotal }}</td>
-                                        <td><a href="{% url 'remove_from_bag' item.inventory.id %}"><i
-                                                    class="bi bi-trash3"></i></a>
-                                        </td>
                                     </tr>
                                     {% endfor %}
                                 </tbody>
@@ -121,8 +91,8 @@
                     <table class="table">
                         <thead>
                             <tr>
-                                <th scope="col"></th>
-                                <th scope="col"></th>
+                                <th scope="col">Items</th>
+                                <th scope="col"><span class = "sr-only">Details</span></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -175,17 +145,26 @@
                 {% csrf_token %}
                 <fieldset class="rounded px-3 mb-5">
                     <legend class="fieldset-label small text-black px-2 w-auto">Details</legend>
+                    <label class = "sr-only" for = "id_full_name">full name</label>
                     {{ order_form.full_name | as_crispy_field }}
+                    <label class = "sr-only" for = "id_email">email</label>
                     {{ order_form.email | as_crispy_field }}
                 </fieldset>
                 <fieldset class="rounded px-3 mb-5">
                     <legend class="fieldset-label small text-black px-2 w-auto">Delivery</legend>
+                    <label class = "sr-only" for = "id_phone_number">Phone</label>
                     {{ order_form.phone_number | as_crispy_field }}
+                    <label class = "sr-only" for = "id_street_address1">Street Address 1</label>
                     {{ order_form.street_address1 | as_crispy_field }}
+                    <label class = "sr-only" for = "id_street_address2">Street Address 2</label>
                     {{ order_form.street_address2 | as_crispy_field }}
+                    <label class = "sr-only" for = "id_town_or_city">town_or_city</label>
                     {{ order_form.town_or_city | as_crispy_field }}
+                    <label class = "sr-only" for = "id_county">county</label>
                     {{ order_form.county | as_crispy_field }}
+                    <label class = "sr-only" for = "id_postcode">postcode</label>
                     {{ order_form.postcode | as_crispy_field }}
+                    <label class = "sr-only" for = "id_country">country</label>
                     {{ order_form.country | as_crispy_field }}
                     <div class="form-check form-check-inline float-right mr-0">
                         {% if user.is_authenticated %}
@@ -235,7 +214,7 @@
     </div>
 </div>
 <div id="loading-overlay">
-    <h1 class="text-light logo-font loading-spinner">
+    <h1 class="text-light logo-font loading-spinner"><span class = "sr-only">Loading</span> 
         <span class="icon">
             <i class="fas fa-3x fa-sync-alt fa-spin"></i>
         </span>
