--- a/products/templates/products/brand_list.html
+++ b/products/templates/products/brand_list.html
@@ -23,7 +23,7 @@
       <thead class="thead-dark">
         <tr>
           <th scope="col">BRAND</th>
-          <th></th>
+          <th><span class="sr-only">MANAGE</span></th>
         </tr>
       </thead>
       <tbody>
