--- a/templates/base.html
+++ b/templates/base.html
@@ -140,7 +140,7 @@
             {% csrf_token %}
             <input class="form-control ms-5" name="q" type="search" placeholder="What are you looking for?"
               aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button class="btn btn-outline-dark" type="submit">Search</button>
           </form>
           <ul class="navbar-nav me-auto me-lg-1 ms-lg-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
@@ -226,7 +226,7 @@
           <div class="mc-field-group">
             <label class = "sr-only" for="mce-EMAIL">Email Address<span class="asterisk">*</span>
             </label>
-            <input type="email" value="" name="EMAIL" aria-label = "email" class="required email" id="mce-EMAIL" placeholder = "e.g. learntodive@divecourses.com">
+            <input type="email" value="" name="EMAIL" aria-label = "email" class="required text-dark email" id="mce-EMAIL" placeholder = "e.g. learntodive@divecourses.com">
           </div>
           <div id="mce-responses" class="clear foot">
             <div class="response" id="mce-error-response" style="display:none"></div>
