--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -56,14 +56,14 @@
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
                                     <span class="input-group-btn">
-                                        <div type="button" class="quantity-left-minus btn btn-secondary bi bi-dash-lg" data-type="minus" data-field="">
+                                        <div class="quantity-left-minus btn btn-secondary bi bi-dash-lg" data-type="minus" data-field="">
                                         </div>
                                     </span>
                                 </div>
                                 <input class="form-control qty_input qty-input input-number" type="number" name="quantity" value="0" min="0" max="0" id="id_qty" data-sku="">
                                 <div class="input-group-append">
                                     <span class="input-group-btn">
-                                        <div type="button" class="quantity-right-plus btn btn-secondary bi bi-plus-lg" data-type="plus" data-field="">
+                                        <div class="quantity-right-plus btn btn-secondary bi bi-plus-lg" data-type="plus" data-field="">
                                         </div>
                                     </span>
                                 </div>
