--- a/courses/templates/courses/course_confirm_delete.html
+++ b/courses/templates/courses/course_confirm_delete.html
@@ -11,6 +11,7 @@
       </div>
     </div>
 </div>
+<!--Form to confirm delete-->
 <div class="container d-flex flex-column align-items-center content justify-content-center">
   <div>
     <form action='.' method='POST'>{% csrf_token %}
