--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,6 +4,7 @@
 {{ block.super }}
 {% endblock %}
 {% block content %}
+<!--Main home page image with start diving now button-->
 <div class="container-fluid content">
     <div id="carouselExampleCaptions" class="carousel slide d-none d-sm-flex position-relative" data-bs-ride="carousel">
         <div class = "container-fluid position-absolute top-0 start-0 w-100 h-100" id="overlay-text">
@@ -18,6 +19,7 @@
                 <div class="d-none col-md-7"></div>
             </div>
         </div>
+        <!--Carousel slides-->
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -40,6 +42,7 @@
 <div>
     <hr>
 </div>
+<!--3 tiles for learn to dive-->
 <div class = "container">
     <div class="row d-flex justify-content-around">
         <div class="col-md mt-3">
@@ -52,6 +55,7 @@
                 </div>
             </div>
         </div>
+        <!--Second tile-->
         <div class="col-md mt-md-3">
             <div class="card mx-auto no-border">
                 <img class="card-img-top" src="{% static 'img/continue-diving-education.jpg' %}" alt="continue diving">
@@ -62,6 +66,7 @@
                 </div>
               </div>
         </div>
+        <!--3rd Tile-->
         <div class="col-md mt-md-3">
             <div class="card mx-auto no-border">
                 <img class="card-img-top" src="{% static 'img/gopro.jpg' %}" alt="go pro">
@@ -77,6 +82,7 @@
 <div>
     <hr>
 </div>
+<!--Mid page divider with link to purchase scuba equipment-->
 <div class="container-fluid p-0">
     <div class="bg-img-holder-home">
         <div class="holder-home-inner black-background-filter p-3">
@@ -97,6 +103,7 @@
 <div>
     <hr>
 </div>
+<!--Our INstructors recommend section-->
 <p class = "fs-4 text-bold" >OUR INSTRUCTORS RECOMMEND...</p>
 <div class="content container d-flex flex-row flex-nowrap w-100 overflow-scroll">
     {% for product in products %}
@@ -112,6 +119,7 @@
 <div>
     <hr>
 </div>
+<!--Get in touch image and link-->
 <div class="container-fluid p-0 about-background home">
     <div class="bg-img-holder-home about-background">
         <div class="holder-home-inner black-background-filter p-3">
