--- a/courses/templates/courses/course_form.html
+++ b/courses/templates/courses/course_form.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block extra_css %}
 {{ block.super }}
-<link rel="stylesheet" href="{% static 'courses/css/courses.css' %}">courses/static/css/courses.css
+<link rel="stylesheet" href="{% static 'courses/css/courses.css' %}">
 {% endblock %}
 {% block content %}
 
