fix html errors product details

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -53,19 +53,15 @@
                     </select>
                     <label for = "id_qty" class="mt-3"><strong>Quantity:</strong></label>
                     <div class="form-group d-flex">
-                            <div class="input-group mb-3">
+                            <div class="input-group mb-3 w-50">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-btn">
-                                        <div class="quantity-left-minus btn btn-secondary bi bi-dash-lg" data-type="minus" data-field="">
-                                        </div>
-                                    </span>
+                                    <div class="quantity-left-minus btn btn-secondary bi bi-dash-lg" data-type="minus" data-field="">
+                                    </div>
                                 </div>
                                 <input class="form-control qty_input qty-input input-number" type="number" name="quantity" value="0" min="0" max="0" id="id_qty" data-sku="">
                                 <div class="input-group-append">
-                                    <span class="input-group-btn">
-                                        <div class="quantity-right-plus btn btn-secondary bi bi-plus-lg" data-type="plus" data-field="">
-                                        </div>
-                                    </span>
+                                    <div class="quantity-right-plus btn btn-secondary bi bi-plus-lg" data-type="plus" data-field="">
+                                    </div>
                                 </div>
                             </div>
                         </div>
