--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -50,7 +50,7 @@
                     <div id="collapse{{ forloop.counter }}" class="accordion-collapse collapse" aria-labelledby="heading{{ forloop.counter }}" data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
                             <p class="bold">{{ faq.question }}</p>
-                            <p>{{ faq.answer | linebreaks}}</p>
+                            <div>{{ faq.answer | linebreaks}}</div>
                         </div>
                     </div>
                 </div>
