--- a/contact/static/contact/css/contact.css
+++ b/contact/static/contact/css/contact.css
@@ -1,6 +1,6 @@
 /* Image for contact page */
 .contact-background{
-    background-image: url(../img/contact-us-learn-to-scuba-dive.jpg);
+    background-image: url(../img/contact-us-learn-to-scuba-dive.webp);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
