--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -28,13 +28,13 @@
         <div class="carousel-inner">
             <div class="carousel-item height-85 active">
                 <!-- Images Oleksandr Sushko unsplash -->
-                <img src="{% static 'img/learn-to-scuba-home.jpg' %}" class="d-block w-100" alt="dolphins with coral">
+                <img src="{% static 'img/learn-to-scuba-home.webp' %}" class="d-block w-100" alt="dolphins with coral">
             </div>
             <div class="carousel-item height-85">
-                <img src="{% static 'img/learn-to-scuba-home-2.jpg' %}" class="d-block w-100" alt="learning to scuba dive">
+                <img src="{% static 'img/learn-to-scuba-home-2.webp' %}" class="d-block w-100" alt="learning to scuba dive">
             </div>
             <div class="carousel-item height-85">
-                <img src="{% static 'img/home-carousel-1.jpg' %}" class="d-block w-100" alt="dolphins swimming">
+                <img src="{% static 'img/home-carousel-1.webp' %}" class="d-block w-100" alt="dolphins swimming">
             </div>
         </div>
     </div>
@@ -47,7 +47,7 @@
     <div class="row d-flex justify-content-around">
         <div class="col-md mt-3">
             <div class="card mx-auto no-border">
-                <img class="card-img-top mx-auto" src="{% static 'img/learn-to-dive-with-us.jpg' %}" alt="Learn to dive">
+                <img class="card-img-top mx-auto" src="{% static 'img/learn-to-dive-with-us.webp' %}" alt="Learn to dive">
                 <div class="card-body">
                   <h5 class="card-title">LEARN TO DIVE</h5>
                   <p class="card-text">Discover Scuba with us...</p>
@@ -58,7 +58,7 @@
         <!--Second tile-->
         <div class="col-md mt-md-3">
             <div class="card mx-auto no-border">
-                <img class="card-img-top" src="{% static 'img/continue-diving-education.jpg' %}" alt="continue diving">
+                <img class="card-img-top" src="{% static 'img/continue-diving-education.webp' %}" alt="continue diving">
                 <div class="card-body">
                   <h5 class="card-title">CONTINUE DIVING</h5>
                   <p class="card-text">Learn diving specialties and niches</p>
@@ -69,7 +69,7 @@
         <!--3rd Tile-->
         <div class="col-md mt-md-3">
             <div class="card mx-auto no-border">
-                <img class="card-img-top" src="{% static 'img/gopro.jpg' %}" alt="go pro">
+                <img class="card-img-top" src="{% static 'img/gopro.webp' %}" alt="go pro">
                 <div class="card-body">
                   <h5 class="card-title">PRO DIVING COURSES</h5>
                   <p class="card-text">Work the dream...</p>
